<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_color"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rel_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:background="@color/colorPrimary"
            android:orientation="vertical">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingHorizontal="@dimen/_10sdp"
                android:src="@drawable/logo_white" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_minus10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/layout_registratin"
            android:orientation="vertical"
            android:paddingStart="@dimen/_20sdp"
            android:paddingTop="@dimen/_20sdp"
            android:paddingEnd="@dimen/_20sdp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mont_semibold"
                        android:text="@string/log_in"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_16sdp" />

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_email_id"
                            android:importantForAutofill="no"
                            android:inputType="text"
                            android:maxLength="80"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/mont_medium"
                            android:hint="@string/enter_password"
                            android:imeOptions="actionDone"
                            android:importantForAutofill="no"
                            android:inputType="textPassword"
                            android:maxLength="40"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textSize="@dimen/_12sdp" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <RelativeLayout
                        android:id="@+id/rel_continue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:background="@drawable/bg_btn_continue"
                        android:padding="@dimen/_8sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:drawablePadding="@dimen/_10sdp"
                            android:text="@string/continue_"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold"
                            app:drawableEndCompat="@drawable/ic_forward_arrow" />

                    </RelativeLayout>

                    <TextView
                        android:id="@+id/txt_sign_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:fontFamily="@font/mont_medium"
                        android:text="@string/don_t_have_an_account_sign_up"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/txt_forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/mont_medium"
                        android:text="@string/forgot_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rel_whatsapp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:background="@drawable/bg_btn_whatsapp"
                    android:padding="@dimen/_8sdp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:drawablePadding="@dimen/_10sdp"
                        android:text="@string/login_with_whatsapp"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold"
                        app:drawableEndCompat="@drawable/ic_wa_login" />

                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mont_medium"
                    android:text="@string/terms_of_use"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

                <View
                    android:layout_width="@dimen/_1sdp"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_3sdp"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/txt_privacy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mont_medium"
                    android:text="@string/privacy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />


                <TextView
                    android:id="@+id/txt_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/mont_medium"
                    android:text="@string/policy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>
</layout>